--- a/BaiTap/2023_BTHTCNWeb_/Tuan1/bai1/bai1.html
+++ b/BaiTap/2023_BTHTCNWeb_/Tuan1/bai1/bai1.html
@@ -11,17 +11,13 @@
         font-weight: normal;
         position: absolute;
     }
-    #nen1{
-        background-size: cover;
-        opacity: 0.5;
+    body{
+        border-style: ridge; width: 30%;
+        border-width: 10px;
     }
-    img{
-        width: 20px;
-        height: 20px;
     
-    }
 </style>
-<body background="dom.jpg" id="nen1">
+<body>
     <h1 id="Example Menu Cafe">Example Menu Cafe</h1>
     <a href="#Starters"> Starters |  </a>
     <a href="#Main course"> Main course |  </a>
@@ -56,8 +52,6 @@
     <a href="#Example Menu Cafe"> Back to top </a>
     <p>Items marked with a (v) are suitable for vegetarians</p>
 
-    <a href="https://hsr.hoyoverse.com/vi-vn/home">
-        <img src="raiden.jpg" alt="trang chu">
-    </a>
+    
 </body>
 </html>
