--- a/BaiTap/2023_BTHTCNWeb_/Tuan1/bai1/bai1.html
+++ b/BaiTap/2023_BTHTCNWeb_/Tuan1/bai1/bai1.html
@@ -12,10 +12,12 @@
         position: absolute;
     }
     body{
-        border-style: ridge; width: 30%;
-        border-width: 10px;
-    }
-    
+        width:30%;
+        border: 1px solid;
+        padding: 10px;
+        box-shadow: 1px 1px 1px 5px #AAA;
+        }
+        
 </style>
 <body>
     <h1 id="Example Menu Cafe">Example Menu Cafe</h1>
