--- a/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai2/Bai2a/Bai2a.html
+++ b/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai2/Bai2a/Bai2a.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai2a</title>
 </head>
+<style>
+    body{ 
+    border-style: solid ;
+    border-color: blue;
+    padding: 10px;
+    }
+</style>
 <body>
     <img src="euler.jpg" alt="euler">
     <hr size = 2 color="gray">
