--- a/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai2/Bai2b/Bai2b.html
+++ b/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai2/Bai2b/Bai2b.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai2b</title>
 </head>
+<style>
+    body{
+        border-style: solid ;
+        padding: 8px;
+    }
+</style>
 <body>
     <img src="dessertweb.jpg" alt="dessertweb">
     <hr>
