--- a/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai4/classes.html
+++ b/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai4/classes.html
@@ -15,7 +15,7 @@
 <body>
     <img src="diamond.jpg" alt="">
     <hr>
-    <b><a href="hometxt.html">home page</a>  &#9830;
+    <b><a href="home.html">home page</a>  &#9830;
         <a href="#Facilities">Facilities</a> &nbsp; &#9830;
         <a href="classes.html">Classes</a> &nbsp; &#9830;
         <a href="member.html">MemberShip</a> &nbsp; &#9830;
