--- a/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai4/member.html
+++ b/BaiTap/2023_BTHTCNWeb_/Tuan1/Bai4/member.html
@@ -15,7 +15,7 @@
 <body>
     <img src="diamond.jpg" alt="">
     <hr>
-    <b><a href="hometxt.html">home page</a>  &#9830;
+    <b><a href="home.html">home page</a>  &#9830;
         <a href="index.html">Facilities</a> &nbsp; &#9830;
         <a href="index.html">Staff</a> &nbsp; &#9830;
         <a href="index.html">Hours</a> &nbsp;  &#9830;
